@@ -7,6 +7,18 @@ In Progress
 - Overhauled token stealing user experience--this is the cadillac version. You
   now get a nice list of the available tokens (from the post module), click to
   impersonate, refresh, rev2self, and getuid. 
+- Improved file browser responsiveness
+- Table view now allows individual hosts to be deselected in an interveral 
+  (Armitage will no longer reselect these hosts for you)
+- Dynamic workspaces no longer requires a comma and a space between entries (a
+  comma is good enough)
+- Improved the [Host] -> Remove menu option
+- Deconfliction server now returns the previous 100 events to new clients.
+- File browser directory up button is now more obvious
+- Keyboard accelerators when you right-click in the graph view are now correct.
+- Adjusted the graph view scrolling increments to something sane.
+- Added a slight delay between commands issued to a console to prevent them 
+  from executing out of order.
 
 21 Feb 12
 ---------
